[deploy r20180424101110] FIX z-index to-home header

--- a/_assets/css/app/header.sass
+++ b/_assets/css/app/header.sass
@@ -39,6 +39,7 @@
           font-size: 50px
         & > .to-home
           text-decoration: underline
+          z-index: 1
 
 ._404 #header
   height: 100vh
